<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgFotoVer"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo2343"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtNombreVer"
        android:layout_width="153dp"
        android:layout_height="19dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toEndOf="@+id/imgFotoVer"
        app:layout_constraintTop_toBottomOf="@+id/txtidUsuarioVer" />

    <TextView
        android:id="@+id/txtContraseniaVer"
        android:layout_width="197dp"
        android:layout_height="28dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:text="@string/contrasenia"
        app:layout_constraintStart_toEndOf="@+id/imgFotoVer"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreVer" />

    <TextView
        android:id="@+id/txtPermisosVer"
        android:layout_width="135dp"
        android:layout_height="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/permisos"
        app:layout_constraintStart_toEndOf="@+id/imgFotoVer"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseniaVer" />

    <TextView
        android:id="@+id/txtidUsuarioVer"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/id"
        app:layout_constraintStart_toEndOf="@+id/imgFotoVer"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>